crates/ty_python_semantic/resources/mdtest/snapshots/basic.md_-_Structures_-_Multiple_objects_imp…_(cbfbf5ff94e6e104).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: basic.md - Structures - Multiple objects imported from an unresolved module
mdtest path: crates/ty_python_semantic/resources/mdtest/import/basic.md
---

# Python source files

## mdtest_snippet.py

```
1 | # error: [unresolved-import]
2 | from does_not_exist import foo, bar, baz
```

# Diagnostics

```
error[unresolved-import]: Cannot resolve imported module `does_not_exist`
 --> src/mdtest_snippet.py:2:6
  |
2 | from does_not_exist import foo, bar, baz
  |      ^^^^^^^^^^^^^^
  |
info: Searched in the following paths during module resolution:
info:   1. /src (first-party code)
info:   2. vendored://stdlib (stdlib typeshed stubs vendored by ty)
info:   3. vendored://stubs (third-party stubs vendored by ty)
info: make sure your Python environment is properly configured: https://docs.astral.sh/ty/modules/#python-environment

```
