crates/ty_python_semantic/resources/mdtest/snapshots/unresolved_import.md_-_Unresolved_import_di…_-_Using_`from`_with_to…_(4b8ba6ee48180cdd).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: unresolved_import.md - Unresolved import diagnostics - Using `from` with too many leading dots
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unresolved_import.md
---

# Python source files

## package/__init__.py

```
```

## package/foo.py

```
1 | def add(x, y):
2 |     return x + y
```

## package/subpackage/subsubpackage/__init__.py

```
1 | from ....foo import add  # error: [unresolved-import]
2 | 
3 | stat = add(10, 15)
```

# Diagnostics

```
error[unresolved-import]: Cannot resolve imported module `....foo`
 --> src/package/subpackage/subsubpackage/__init__.py:1:10
  |
1 | from ....foo import add  # error: [unresolved-import]
  |          ^^^
  |
help: The module can be resolved if the number of leading dots is reduced
help: Did you mean `...foo`?
info: Searched in the following paths during module resolution:
info:   1. /src (first-party code)
info:   2. vendored://stdlib (stdlib typeshed stubs vendored by ty)
info:   3. vendored://stubs (third-party stubs vendored by ty)
info: make sure your Python environment is properly configured: https://docs.astral.sh/ty/modules/#python-environment

```
